--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "kvell-db-plugin-mongoose": "^1.0.1-alpha.9.3.1",
     "kvell-scripts": "1.0.1-alpha.9.3.1"
   },
   "eslintConfig": {
