--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "celebrate": "^12.2.0",
+    "formidable": "^1.2.2",
+    "jsonwebtoken": "^8.5.1",
     "kvell-db-plugin-mongoose": "^1.0.1-alpha.9.3.1",
-    "kvell-scripts": "1.0.1-alpha.9.3.1"
+    "kvell-db-plugin-sequelize": "^1.0.1-alpha.9.3.1",
+    "kvell-scripts": "1.0.1-alpha.9.3.1",
+    "mv": "^2.1.1"
   },
   "eslintConfig": {
     "extends": "kvell-scripts"
